	PR 5233 	* elf.c (rewrite_elf_program_header): Formatting.  Add 	first_matching_lma and first_suggested_lma booleans and use 	instead of testing matching_lma and suggested_lma for zero.